<resources>
    <string name="app_name">person_card</string>
    <string name="name">Jinana Qais</string>
    <string name="hours">3 hr</string>
    <string name="location">UK</string>
    <string name="time_period">5 Days ago</string>
    <string name="rate">4.5</string>
    <string name="reviews">(150 Reviews)</string>
    <string name="job">Engineer</string>
    <string name="city">Russian</string>
</resources>